[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/objects/moving-bamboo-spike/MovingBambooSpikeBase.png" type="Texture" id=1]
[ext_resource path="res://src/objects/moving-bamboo-spike/MovingBambooSpike.gd" type="Script" id=2]
[ext_resource path="res://src/objects/moving-bamboo-spike/MovingBambooSpike.png" type="Texture" id=3]
[ext_resource path="res://src/objects/moving-bamboo-spike/bamboo-spike.wav" type="AudioStream" id=4]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( -4, 0, -4, -11, 1, -14, 4, -11, 4, 0 )

[node name="MovingBambooSpike" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="CollisionShape2D"]
texture = ExtResource( 3 )
offset = Vector2( 0, -8 )

[node name="Tween" type="Tween" parent="."]

[node name="InitialDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="SpriteBlock" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
max_distance = 120.0
attenuation = 2.2974

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="tween_completed" from="Tween" to="." method="_on_tween_completed"]
[connection signal="timeout" from="InitialDelayTimer" to="." method="_on_InitialDelayTimer_timeout"]
